--- a/paper-based/index.html
+++ b/paper-based/index.html
@@ -6,6 +6,8 @@
 <!-- Define inlined JavaScript -->
 <script type="text/javascript">
 
+        var ROI_MIN_SIZE = 20;
+
         roiStyle = {
             strokeColor: 'black',
             fillColor: 'rgba(255, 0, 0, 0.2)'
@@ -113,12 +115,10 @@
                         selectBox.position = selectedItem.position;
                         updateHandles();
                     } else if (mode == 'resize') {
-
                         var options = resizeOptions[resizeMode];
-
                         var b = selectedItem.bounds;
-                        var new_width = Math.max(b.width + event.delta.x * options[1], 10);
-                        var new_height = Math.max(b.height + event.delta.y * options[2], 10);
+                        var new_width = Math.max(b.width + event.delta.x * options[1], ROI_MIN_SIZE);
+                        var new_height = Math.max(b.height + event.delta.y * options[2], ROI_MIN_SIZE);
                         selectedItem.scale(new_width / b.width, new_height / b.height, selectedItem.bounds[options[0]]);
                         selectBox.scale(new_width / b.width, new_height / b.height, selectBox.bounds[options[0]]);
                         updateHandles();
