--- a/paper-based/index.html
+++ b/paper-based/index.html
@@ -65,6 +65,8 @@
 
         <button id="edit-roi-label">Edit Label</button>
 
+        <button id="delete-roi">Delete</button>
+
         Zoom: <input type="number" min="0" max="1000" id="zoom-tool" value="100" step="10" />
 
         <img src="sample.jpg" style="display: none;" id="image" />
