Add rectangle creation tool

--- a/paper-based/index.html
+++ b/paper-based/index.html
@@ -63,9 +63,13 @@
 
         <button id="toggle-rois">Toggle ROIs</button>
 
+        <button id="edit-roi">Edit</button>
+
         <button id="edit-roi-label">Edit Label</button>
 
         <button id="delete-roi">Delete</button>
+
+        <button id="add-rectangle-roi">Rectangle</button>
 
         Zoom: <input type="number" min="0" max="1000" id="zoom-tool" value="100" step="10" />
 
