Add undo/redo functionality

--- a/paper-based/index.html
+++ b/paper-based/index.html
@@ -71,6 +71,10 @@
 
         <button id="add-rectangle-roi">Rectangle</button>
 
+        <button id="undo"></button>
+
+        <button id="redo"></button>
+
         Zoom: <input type="number" min="0" max="1000" id="zoom-tool" value="100" step="10" />
 
         <img src="sample.jpg" style="display: none;" id="image" />
