Add ellipse tool

--- a/paper-based/index.html
+++ b/paper-based/index.html
@@ -71,6 +71,8 @@
 
         <button id="add-rectangle-roi">Rectangle</button>
 
+        <button id="add-ellipse-roi">Ellipse</button>
+
         <button id="undo"></button>
 
         <button id="redo"></button>
