--- a/paper-based/index.html
+++ b/paper-based/index.html
@@ -37,6 +37,8 @@
 
         <button id="add-point-roi">Point</button>
 
+        <button id="add-line-roi">Line</button>
+
         <button id="undo"></button>
 
         <button id="redo"></button>
