--- a/paper-based/index.html
+++ b/paper-based/index.html
@@ -39,6 +39,8 @@
 
         <button id="add-line-roi">Line</button>
 
+        <button id="add-text-roi">Text</button>
+
         <button id="undo"></button>
 
         <button id="redo"></button>
